Archive2/8e/21938612446974/output
main.cpp:19:5: error: too many template arguments for class template 'rank'
    rank<int, 2> r;
    ^         ~~
main.cpp:5:8: note: template is declared here
struct rank
       ^
1 error generated.
